--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:installLocation="auto">
     <application>
         <activity
-                android:name="com.github.marmalade.aRevelation.MainActivity">
+                android:name="com.github.marmalade.aRevelation.MainActivity"
+                android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
