--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,13 +6,19 @@
         android:versionCode="1"
         android:versionName="0.01"
         android:installLocation="auto">
-    <application>
+    <application
+            android:icon="@drawable/icon"
+            android:label="aRevelation">
         <activity
-                android:label="aRevelation"
-                android:name="com.github.marmalade.aRevelation.MainActivity"
+                android:name=".MainActivity"
                 android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <category android:name="android.intent.category.BROWSABLE"></category>
+                <data android:scheme=".MainActivity"></data>
             </intent-filter>
         </activity>
     </application>
