--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,8 @@
         android:versionCode="1"
         android:versionName="0.01"
         android:installLocation="auto">
+        
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="17"/>
     <application
             android:icon="@drawable/icon"
             android:label="aRevelation">
