Added gradle build to make project compatible with Android studio

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
+# Eclipse
+.project
+.classpath
+.settings
+
+# IntelliJ IDEA
+.idea
+*.iml
+*.ipr
+*.iws
+classes
+
+# Gradle
+.gradle
+build
+
+
+# Ant
 /bin
 /gen
+local.properties
