--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:label="aRevelation">
         <activity
                 android:name=".MainActivity"
-                android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+                android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
